# pedpol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release_pypi_github.yml  test_and_lint.yml
src/pedigree/: checks.py  core.py  generations.py  validation.py
src/pedpol/: __init__.py  core.py  generations.py  validation.py
tests/: conftest.py
tests/pedigree/: test_checks.py  test_checks2.py  test_generation.py  test_generations.py  test_validation.py
tests/pedpol/: eg_generations.py  test_generations.py  test_validation.py
tests/resources/: ped_basic.csv  ped_breed_jv.csv  ped_circular.csv  ped_errors.csv  ped_literal.csv
