[project]
name = "pedigree"
version = "0.1.0"
description = "Add your description here"
dependencies = ["polars>=0.19.19"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.3.0", "pytest", "ipykernel>=6.29.4", "numpy<2.0.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pedigree"]
